--- a/Aula 04/index04.html
+++ b/Aula 04/index04.html
@@ -12,6 +12,7 @@
   <h1> Produtos</h1>
   <div id="produto1"></div>
   <div id="produto2"></div>
+  <div id="caixa"></div>
 
 
   <script src="js/script04.js">
