--- a/Aula 06/index061.html
+++ b/Aula 06/index061.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   
-  <script src="js/filmes.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/produtos.js"></script>
+  <script src="js/scriptprod.js"></script>
 
 </body>
 </html>
